--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,7 @@
              xmlns:local="clr-namespace:WpfApp1"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <Style TargetType="Button"></Style>
         <Style  TargetType="Button" x:Key="ArrowButton" >
             <Setter Property="Template">
                 <Setter.Value>
